# echo-rust

./: Cargo.toml  README.md  build.rs  shell.nix
.config/: config
info/: decomp_tinycap.c  tinyalsa.h  tinycap.c  tinypcminfo.c
src/: bitconvert.rs  libtinyalsa.rs  main.rs
unused/: flake.nix  shell.nix
